# kicklab

./: CMakeLists.txt
.github/workflows/: build.yml
Source/: Main.cpp
Source/modules/: CMakeLists.txt
Source/modules/kicklab_dsp/: kicklab_dsp.cpp  kicklab_dsp.h
Source/modules/kicklab_dsp/Engine/: Engine.cpp  Engine.h
Source/modules/kicklab_dsp/Engine/effects/: EffectsManager.cpp  EffectsManager.h
Source/modules/kicklab_dsp/Engine/synth/: KickSynth.cpp  KickSynth.h  KickSynthVoice.cpp  KickSynthVoice.h
Source/modules/kicklab_dsp/Processor/: Processor.cpp  Processor.h
Source/modules/kicklab_dsp/synth/: KickSynth.cpp  KickSynth.h  KickSynthVoice.cpp  KickSynthVoice.h
Source/modules/kicklab_gui/: kicklab_gui.cpp  kicklab_gui.h
Source/modules/kicklab_gui/GUI/: GUI.cpp  GUI.h
Source/modules/kicklab_gui/Header/: AboutPopup.cpp  AboutPopup.h  Header.cpp  Header.h  LogoButton.cpp  LogoButton.h  ScaleChooser.cpp  ScaleChooser.h
Source/modules/kicklab_gui/Header/OutputLevel/: LevelMeter.cpp  LevelMeter.h  OutputLevel.cpp  OutputLevel.h  Thumb.cpp  Thumb.h
Source/modules/kicklab_gui/Header/PresetBar/: PresetBar.h
Source/modules/kicklab_state/: Parameters.h  kicklab_state.h
Source/modules/new_dsp/: new_dsp.cpp  new_dsp.h
Source/modules/new_gui/: new_gui.cpp  new_gui.h
Source/modules/new_state/: Parameters.h  new_state.h
Source/plugin/: Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
